--- a/master_thesis.tex
+++ b/master_thesis.tex
@@ -35,31 +35,31 @@
 \pagestyle{plain}
 \section{INTRODUCTION}
 \input{chapters/introduction.tex}
-\label{kap:Introduction}
+\label{chap:Introduction}
 \clearpage
 
 \newpage
 \section{LITERATURE}
 \input{chapters/literarypart.tex}
-\label{kap:Literary part}
+\label{chap:Literary part}
 \clearpage
 
 \newpage
 \section{EXPERIMENT}
 \input{chapters/experimentalpart.tex}
-\label{kap:Experimental part}
+\label{chap:Experimental part}
 \clearpage
 
 \newpage
 \section{RESULTS AND DISCUSSION}
 \input{chapters/results.tex}
-\label{kap:Results}
+\label{chap:Results}
 \clearpage
 
 \newpage
 \section{CONCLUSION}
 \input{chapters/conclusion.tex}
-\label{kap:Conclusion}
+\label{chap:Conclusion}
 \clearpage
 
 \newpage
