page margins modified, now 2.5 cm

--- a/master_thesis.tex
+++ b/master_thesis.tex
@@ -5,6 +5,12 @@
 \documentclass[a4paper,12pt]{article}
 
 \usepackage{master_thesis_style} % loading the style package
+\geometry{
+    margin = 2.5 cm,
+    footskip = 0 cm
+}
+
+\usepackage{showframe}
 
 % a path to figures
 \graphicspath{{figures/}}
