--- a/master_thesis_style.sty
+++ b/master_thesis_style.sty
@@ -7,6 +7,9 @@
 
 \ProvidesPackage{master_thesis_style}[2022/05/18 Master thesis VSCHT - UCT Prague]
 
+\def\pwidth{210}
+\def\margin{25mm}
+
 \usepackage[version=3]{mhchem} % commands for typesetting chemical molecular formulae and equations
 
 \usepackage[colorlinks=true, linkcolor=black, citecolor=black, filecolor=black, urlcolor=black]{hyperref} % to handle cross-referencing commands
